add hotel id in query of book_room
